--- a/ChitChatter/Views/Home/Contact.cshtml
+++ b/ChitChatter/Views/Home/Contact.cshtml
@@ -1,17 +1,16 @@
 ﻿@{
-    ViewBag.Title = "Contact";
+    ViewBag.Title = "Contact Information";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<h2>@ViewBag.Title</h2>
+@*<h3>@ViewBag.Message</h3>*@
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
+    <span id="fontChange"><span id="spanOne">We</span><span id="spanTwo">Can</span><span id="spanThree">{Code}</span><span id="spanFour">IT</span></span><br />
+    50 Public Square #200<br />
+    Cleveland, OH 44113<br />
 </address>
 
 <address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Sarah Kaminski:</strong>    <a href="mailto:sarahe.kaminski@gmail.com">sarahe.kaminski@gmail.com</a><br />
+    <strong>Kurt Weber:</strong>    <a href="mailto:Weberkrt@msn.com">weberkrt@msn.com</a>
 </address>
