--- a/ChitChatter/Views/ChitChats/Create.cshtml
+++ b/ChitChatter/Views/ChitChats/Create.cshtml
@@ -4,15 +4,15 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
+<h2>Post ChitChat</h2>
 
 
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>ChitChat</h4>
+
+   <div class="form-horizontal">
+        @*<h4>ChitChat</h4>*@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -32,7 +32,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to Current Posts", "Index")
 </div>
 
 @section Scripts {
