--- a/ChitChatter/Views/ChitChats/Delete.cshtml
+++ b/ChitChatter/Views/ChitChats/Delete.cshtml
@@ -4,11 +4,11 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<h2>Delete Post</h2>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>ChitChat</h4>
+    @*<h4>ChitChat</h4>*@
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -26,7 +26,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            @Html.ActionLink("Back to Current Posts", "Index")
         </div>
     }
 </div>
