--- a/ChitChatter/Views/Home/About.cshtml
+++ b/ChitChatter/Views/Home/About.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
-    ViewBag.Title = "About";
+    ViewBag.Title = "About ChitChatter Application";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<h2>@ViewBag.Title</h2>
+@*<h3>@ViewBag.Message</h3>*@
 
-<p>Use this area to provide additional information.</p>
+<p>This Application was create by Sarah Kaminski and Kurt Weber to view User ChitChats</p>
