--- a/ChitChatter/Content/Site.css
+++ b/ChitChatter/Content/Site.css
@@ -41,7 +41,10 @@
     padding:25px;
     background-color:aqua;
 }
-
+/*NAVBAR*/
+.navbar-inverse .navbar-nav > li > a {
+    color: aqua;
+}
 .navbar-inverse .navbar-brand {
     color: aqua;
 }
@@ -88,7 +91,4 @@ textarea {
 /*Chnage Jumbotron background to white*/
 .jumbotron {
     background-color:white;
-}
-.navbar-inverse .navbar-nav > li > a {
-    color: aqua;
 }
